name:                2048nes
version:             0.1.0.0
synopsis:            2048 Game for NES
description:         A clone of the 2048 written to run on the NES.
                     The game is programmed in an assembly language DSL
                     embedded in Haskell.
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagitj@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.NES
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
