name:                pong
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagitj@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable pong
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base
                     , time
                     , reactive-banana
                     , GLFW-b
                     , OpenGLRaw
                     , active
                     , vector-space
  ghc-options:         -Wall
