name:                pong
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagitj@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable reactive-banana-pong
  hs-source-dirs:      reactive-banana
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base
                     , time
                     , reactive-banana
                     , GLFW-b >= 1
                     , OpenGLRaw
                     , active
                     , vector-space
  ghc-options:       -Wall -O2
  ghc-prof-options:  -fprof-auto -prof -rtsopts

executable yampa-pong
  hs-source-dirs:      yampa
  main-is:             Main.hs
  other-modules:       Utils.OpenGL
                     , Utils.GLFW
                     , Utils.Yampa
                     , GameState
  build-depends:       base
                     , time
                     , Yampa
                     , GLFW-b >= 1
                     , OpenGLRaw
                     , vector-space
                     , random
  ghc-options:       -Wall -O2
  ghc-prof-options:  -fprof-auto -prof -rtsopts
